--- a/index.html
+++ b/index.html
@@ -45,30 +45,30 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div>
-                                <img src="img/nav1.png" >
+                                <img src="img/testnav.png" >
+                                <div class="my_swiper_bg"></div>
+                                <div class="my_swiper_text">天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题</div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div>
+                                <img src="img/testnav.png">
                                 <div class="my_swiper_bg"></div>
                                 <div class="my_swiper_text">天下足球标题</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div>
-                                <img src="img/nav1.png">
-                                <div class="my_swiper_bg"></div>
-                                <div class="my_swiper_text">天下足球标题</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div>
-                                <img src="img/nav1.png">
+                                <img src="img/testnav.png">
                                 <div class="my_swiper_bg"></div>
                                 <div class="my_swiper_text">天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div>
-                                <img src="img/nav1.png">
+                                <img src="img/testnav.png">
                                 <div class="my_swiper_bg"></div>
-                                <div class="my_swiper_text">天下足球标题</div>
+                                <div class="my_swiper_text">天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题</div>
                             </div>
                         </div>
                     </div>
@@ -78,11 +78,11 @@
             
             <div class="weui-panel__bd">
                 <a href="news.html" class="weui-media-box weui-media-box_appmsg">
-                    <div class="weui-media-box__hd">
-                        <img class="my_img" src="img/test.jpg"/>
+                    <div class="weui-media-box__hd over_hidden">
+                        <img class="my_img" src="img/test_c.jpg"/>
                     </div>
                     <div class="weui-media-box__bd">
-                        <h4 class="weui-media-box__title">天下足球标题</h4>
+                        <h4 class="weui-media-box__title">天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题</h4>
                         <p class="weui-media-box__desc">
                             <div class="weui-flex">
                                 <div class="weui-flex__item"><div class="placeholder"><span class="zhanbao">足球战报</span></div></div>
