--- a/first.html
+++ b/first.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="third/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="third/swiper/swiper.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/common.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/quiz.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/first.css" />
 </head>
 <body>
     <div id="otherheader">
@@ -109,6 +109,21 @@
         </div>
     </div>	
 
+    <div>
+        <div class="weui_mask"></div>
+        <div class="weui-dialog">
+            <div class="weui-dialog__bd">
+                <div class="my_hb_bg">
+                    <div class="my_hb">
+                        <img  class="cl_img" src="img/cl.png">
+                        <img class="c_text" src="img/c.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    
     <div id="footer">
             <ul id="footer_content">
                 <li class="footer_list">
@@ -153,4 +168,4 @@
 </html>
 <script src="third/jquery/jquery.min.js"></script>
 <script src="third/swiper/swiper.min.js"></script>
-<script src="js/quiz.js"></script>
+<script src="js/first.js"></script>
