--- a/pkstart.html
+++ b/pkstart.html
@@ -135,7 +135,8 @@
         <form>
         <div id="bet_titel" class="my-text-color-t">
 
-            你当前选择为：<input type="text" value="" id="choose_text" class="choose_type" readonly="readonly"/>  
+            你当前选择为：<input type="text" value="" id="choose_text" class="choose_type" readonly="readonly"/>
+            <input type="text" value="" id="choose_num" class="choose_type" readonly="readonly"/>  
             <div id="close" onclick="closeBetClick()"><img src="img/colse.png"/></div>
         </div>
         <div id="bet_content">
