--- a/user.html
+++ b/user.html
@@ -13,7 +13,7 @@
     <div id="otherheader">
         <div class="otherheader_left" onclick="goBackClick()"><img src="img/left.png" class="otherheader_left_img"></div>
         <div class="otherheader_text"><span>个人中心</span></div>        
-    </div
+    </div>
 	<div class="user">
             <div class="user_content">
                 <div class="weui-panel user_content_top">
