--- a/topup.html
+++ b/topup.html
@@ -72,7 +72,7 @@
 					<div class="weui-flex">
 					    <div class="weui-flex__item">
 					    	<div class="placeholder my_p_t">
-					    		<span><span class="topup_num">50元</span></span>
+					    		<span><span class="topup_num">50</span>元</span>
 					    		<span>5000积分</span>
 					    	</div>
 					    </div>
@@ -114,7 +114,7 @@
 					<div class="zhifu_title_text">
 						支付方式
 						<span class="zhifu_title_text_right">
-							<strong  id="pay_momey">5</strong>元
+							<strong  id="pay_momey">5</strong>元<input class="my_input" type="number" value="0">
 						</span>
 					</div>
 					<div class="zhifu_img">
