--- a/first.html
+++ b/first.html
@@ -115,8 +115,12 @@
             <div class="weui-dialog__bd">
                 <div class="my_hb_bg">
                     <div class="my_hb">
+                        <div class="cl_title">欢迎来到追球者同盟中心</div>
                         <img  class="cl_img" src="img/cl.png">
                         <img class="c_text" src="img/c.png">
+                        <div class="cl_denglu">登陆即送新人参战基金</div>
+                        <div class="cl_feng">500积分</div>
+                        <div class="cl_but">立即领取</div>
                     </div>
                 </div>
             </div>
