--- a/first.html
+++ b/first.html
@@ -109,18 +109,27 @@
         </div>
     </div>	
 
-    <div>
+    <div class="weui_mask_bg">
         <div class="weui_mask"></div>
         <div class="weui-dialog">
             <div class="weui-dialog__bd">
                 <div class="my_hb_bg">
                     <div class="my_hb">
-                        <div class="cl_title">欢迎来到追球者同盟中心</div>
-                        <img  class="cl_img" src="img/cl.png">
-                        <img class="c_text" src="img/c.png">
-                        <div class="cl_denglu">登陆即送新人参战基金</div>
-                        <div class="cl_feng">500积分</div>
-                        <div class="cl_but">立即领取</div>
+                        <div class="li">
+                            <div class="cl_title">欢迎来到追球者同盟中心</div>
+                            <img  class="cl_img" src="img/cl.png">
+                            <img class="c_text" src="img/c.png">
+                            <div class="cl_denglu">登陆即送新人参战基金</div>
+                            <div class="cl_feng">500积分</div>
+                            <div class="cl_but" onclick="lijiClick()">立即领取</div>
+                        </div>
+                        <div class="qu">
+                            <div class="qu_feng">500积分</div>
+                            <div class="qu_feng">
+                                <a href="user.html">去看看</a>
+                                <a href="quiz.html">参与赛事</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
