--- a/quiz.html
+++ b/quiz.html
@@ -75,11 +75,15 @@
                         <span  class="pk_but">对战</span>
                     </div>
                     <div class="pk_countries">
-                        <span>俄国</span>
-                        <img class="pk_countries_guoone" src="img/guo1.png">
-                        <img class="pk_countries_pk_img" src="img/pk_guo.png">
-                        <img class="pk_countries_guotwo" src="img/guo2.png">
-                        <span>沙特</span>
+                        <div class="row">
+                            <div class="col-xs-3 pk_countries_left">沙特沙特沙特沙特沙特</div>
+                            <div class="col-xs-6 my-text-center pk_countries_center">
+                                <img class="pk_countries_guoone" src="img/guo1.png">
+                                <img class="pk_countries_pk_img" src="img/pk_guo.png">
+                                <img class="pk_countries_guotwo" src="img/guo2.png">
+                            </div>
+                            <div class="col-xs-3 pk_countries_right">俄国俄国俄国俄国</div>
+                        </div>
                     </div>
                     <div class="pk_state">已结束</div>
                 </div>
@@ -96,11 +100,15 @@
                         <span class="pk_but">对战</span>
                     </div>
                     <div class="pk_countries">
-                        <span>俄国</span>
-                        <img class="pk_countries_guoone" src="img/guo1.png">
-                        <img class="pk_countries_pk_img" src="img/pk_guo.png">
-                        <img class="pk_countries_guotwo" src="img/guo2.png">
-                        <span>沙特</span>
+                        <div class="row">
+                            <div class="col-xs-3 pk_countries_left">沙特沙特沙特沙特沙特</div>
+                            <div class="col-xs-6 my-text-center pk_countries_center">
+                                <img class="pk_countries_guoone" src="img/guo1.png">
+                                <img class="pk_countries_pk_img" src="img/pk_guo.png">
+                                <img class="pk_countries_guotwo" src="img/guo2.png">
+                            </div>
+                            <div class="col-xs-3 pk_countries_right">俄国俄国俄国俄国</div>
+                        </div>
                     </div>
                     <div class="pk_state">未结束</div>
                 </div>
