--- a/quiz.html
+++ b/quiz.html
@@ -107,7 +107,7 @@
                                 <img class="pk_countries_pk_img" src="img/pk_guo.png">
                                 <img class="pk_countries_guotwo" src="img/guo2.png">
                             </div>
-                            <div class="col-xs-3 pk_countries_right">俄国俄国俄国俄国</div>
+                            <div class="col-xs-3 pk_countries_right">俄国俄</div>
                         </div>
                     </div>
                     <div class="pk_state">未结束</div>
