--- a/user.html
+++ b/user.html
@@ -74,6 +74,16 @@
                 </div>
             </div>
         </div>
+        <div class="js_dialog" id="iosDialog2" style="opacity: 1;">
+            <div class="weui-dialog">
+                <div class="weui-dialog__bd">
+                    <div>绑定微信即送球币</div>
+                    <div class="song_img"><img src="img/goods_money.png">200</div>
+                    <div class="song_but"><a href="javascript:;" class="weui-btn weui-btn_primary my_song_but">立即绑定</a></div>
+                </div>
+            </div>
+        </div>
+    
         <div id="footer">
             <ul id="footer_content">
                 <li class="footer_list">
