--- a/pkend.html
+++ b/pkend.html
@@ -27,11 +27,154 @@
             <div class="pk_name_right">沙特</div>
         </div>
     </div>
-    <div id="pkend_content">
-        <div><img src="img/end.png"></div>
-        <div id="pkend_content_top">抱歉</div>
-        <div>本场比赛已经结束</div>
+    <div id="pkstart_top">
+        —— 请选择你支持的一方 ——
     </div>
+    <div id="pkstart_content">
+        <div id="pkstart_content_but">
+            <div class="row my_row">
+                <div class="col-xs-4">
+                        <!-- bootstrap 进度条是bootstrap进度条组件，用法参考bootstrap组件-->
+                    <button class="btn btn-default my-but-style-t" type="submit">主胜</button>
+                    <div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-my" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                            60%
+                            </div>
+                        </div>                            
+                    </div>
+                    <div class="support">
+                        35人支持
+                    </div>
+                </div>
+                <div class="col-xs-4">
+                    <button class="btn btn-default my-but-style-t" type="submit">平局</button>
+                    <div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-my" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                            60%
+                            </div>
+                        </div>                            
+                    </div>
+                    <div class="support">
+                        35人支持
+                    </div>                        
+                </div>
+                <div class="col-xs-4">
+                    <button class="btn btn-default my-but-style-t" type="submit">客胜</button>
+                    <div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar progress-bar-my" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                            60%
+                            </div>
+                        </div>                            
+                    </div>
+                    <div class="support">
+                        35人支持
+                    </div>                        
+                </div>
+            </div>
+        </div>
+        <div id="pkstart_list">
+            <div class="media">
+                <div class="media-left media-middle" >
+                    <div class="my_media_img"><img class="media-object danqian" src="img/pk_current.png"></div>
+                </div>
+                <div class="media-body">
+                    <h4 class="my_meia_titel my-font-bold"> 当前奖池</h4>
+                    <h4 class="my_meia_titel my_meia_titel_line">
+                        <span class="my-text-color-t">349999999</span>
+                        <span class="my_meia_titel_line_b">积分</span>
+                    </h4>
+                </div>
+            </div>
+           
+            <div class="media">
+                <div class="media-left media-middle" >
+                    <div class="my_media_img"><img class="media-object danqian" src="img/time.png"></div>
+                </div>
+                <div class="media-body">
+                    <h4 class="my_meia_titel my-font-bold">
+                        距截至时间
+                    </h4>
+                    <h4 class="my_meia_titel my_meia_titel_line">
+                        <span class="my-text-color-t">02</span>天
+                        <span class="my-text-color-t mgl10">04</span>时
+                        <span class="my-text-color-t mgl10">50</span>分
+                    </h4>
+                </div>
+            </div>          
+
+            <div class="media">
+                <div class="media-left media-middle" >
+                    <div class="my_media_img"><img class="media-object danqian" src="img/canyu.png"></div>
+                </div>
+                <div class="media-body">
+                    <h4 class="my_meia_titel">
+                        <span class="my-font-bold">参与者</span>
+                        <span class="my_font_bold_num">(1000/324834758)</span>
+                    </h4>
+                    <h4 class="my_meia_titel my_meia_titel_list">
+                        <img src="img/user_img.png">
+                        <img src="img/user_img.png">
+                        <img src="img/user_img.png">
+                        <img src="img/user_img.png">
+                        <img src="img/user_img.png">
+                        <img src="img/user_img.png">
+                    </h4>
+                </div>
+            </div>            
+        </div>
+        <div id="pkstart_footer">
+            <div class="my_pkend_footer_titel">中奖人数</div>
+            <div>
+                <div class="row ranking_my_list">
+                    <div class="col-xs-9 my-text_xs_4"><img class="my_top_img" src="img/user_img.png"/>胜率排行</div>
+                    <div class="col-xs-2">99.99%</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+            <ul id="footer_content">
+                <li class="footer_list">
+                    <a href="index.html" class="my_footer_a my_footer_a_home">
+                        <img class="act_img" src="img/caidan1.png"/>
+                        <img class="no_act footer_list_t" src="img/caidan01.png"/>
+                        <span>赛报</span>
+                    </a>
+                </li>
+                <li class="footer_list">
+                    <a href="ranking.html" class="my_footer_a my_footer_a_bang">
+                        <img class="act_img"  src="img/caidan2.png">
+                        <img class="no_act" src="img/caidan02.png">
+                        <span>榜单</span>
+                    </a>
+                </li>
+                <li class="footer_list footer_list_sai">
+                    <a href="quiz.html"class="my_footer_a my_footer_sai">
+                        <img class="act_img"  src="img/caidan3.png">
+                        <img class="no_act" src="img/caidan03.png">
+                        <span>赛事</span>
+                    </a>
+                </li>
+                <li class="footer_list">
+                    <a href="mall.html" class="my_footer_a my_footer_show">
+                        <img class="act_img"  src="img/caidan4.png">
+                        <img class="no_act" src="img/caidan04.png">
+                        <span>积分商城</span>
+                    </a>
+                    </li>
+                <li class="footer_list">
+                    <a href="user.html" class="my_footer_a my_footer_my">
+                    <img class="act_img" src="img/caidan5.png"/>
+                    <img class="no_act" src="img/user_light.png"/>
+                    <span>我的</span>
+                    </a>
+                </li>
+            </ul>	
+        </div>    
 </body>
 </html>
+<script src="third/jquery/jquery.min.js"></script>
 <script type="text/javascript"  src="js/pkend.js"></script>
