--- a/pkend.html
+++ b/pkend.html
@@ -12,19 +12,19 @@
 </head>
 <body>
     <div id="pkend_header">
-        <div id="pkend_header_left"><img src="img/left.png" onclick="goBackClick()"/></div>
+        <div id="pkend_header_left"><img src="img/left.png" onclick="goBackClick()"/><div class="otherheader_right"><img src="img/share.png"></div></div>
         <div class="pk_countries">
-                <span>俄国</span>
+                <span class="pk_countries_left" style="text-align: right">俄国</span>
                 <img class="pk_countries_guoone" src="img/guo1.png">
                 <span class="pk_title">世界波世界波世界波世界波</span>
                 <img class="pk_countries_guotwo" src="img/guo2.png">
-                <span>沙特</span>
+                <span  class="pk_countries_right">沙特</span>
         </div>
         <div class="pkend_bottom_text">5:000</div>
         <div id="pk_name">
             <div class="pk_name_lfet">俄国</div>
             <img class="pk_time_img" src="img/my_pktiem.png" /><span>23：00</span>
-            <div class="pk_name_right">沙特</div>
+            <div class="pk_name_right">沙特沙特沙特沙特</div>
         </div>
     </div>
     <div id="pkstart_top">
