--- a/pkend.html
+++ b/pkend.html
@@ -33,7 +33,8 @@
     <div id="pkstart_content">
         <div id="pkstart_content_but">
             <div class="row my_row">
-                <div class="col-xs-4">
+                <div class="col-xs-4 my_col-xs-4">
+                        <img  class="win" src="img/win.png">
                         <!-- bootstrap 进度条是bootstrap进度条组件，用法参考bootstrap组件-->
                     <button class="btn btn-default my-but-style-t" type="submit">主胜</button>
                     <div>
@@ -47,7 +48,8 @@
                         35人支持
                     </div>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-4 my_col-xs-4">
+                        <img  class="win" src="img/win.png">
                     <button class="btn btn-default my-but-style-t" type="submit">平局</button>
                     <div>
                         <div class="progress">
@@ -60,7 +62,8 @@
                         35人支持
                     </div>                        
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-4 my_col-xs-4">
+                    <img class="win" src="img/win.png">
                     <button class="btn btn-default my-but-style-t" type="submit">客胜</button>
                     <div>
                         <div class="progress">
