--- a/pkend.html
+++ b/pkend.html
@@ -33,10 +33,10 @@
     <div id="pkstart_content">
         <div id="pkstart_content_but">
             <div class="row my_row">
-                <div class="col-xs-4 my_col-xs-4">
-                        <img  class="win" src="img/win.png">
+                <div class="col-xs-4">
+                        
                         <!-- bootstrap 进度条是bootstrap进度条组件，用法参考bootstrap组件-->
-                    <button class="btn btn-default my-but-style-t" type="submit">主胜</button>
+                    <button class="btn btn-default my-but-style-t my_col-xs-4" type="submit">主胜<img  class="win" src="img/win.png"></button>
                     <div>
                         <div class="progress">
                             <div class="progress-bar progress-bar-my" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
@@ -48,9 +48,9 @@
                         35人支持
                     </div>
                 </div>
-                <div class="col-xs-4 my_col-xs-4">
-                        <img  class="win" src="img/win.png">
-                    <button class="btn btn-default my-but-style-t" type="submit">平局</button>
+                <div class="col-xs-4">
+                    <button class="btn btn-default my-but-style-t my_col-xs-4" type="submit">平局<img  class="win" src="img/win.png">
+                    </button>
                     <div>
                         <div class="progress">
                             <div class="progress-bar progress-bar-my" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
@@ -62,9 +62,9 @@
                         35人支持
                     </div>                        
                 </div>
-                <div class="col-xs-4 my_col-xs-4">
-                    <img class="win" src="img/win.png">
-                    <button class="btn btn-default my-but-style-t" type="submit">客胜</button>
+                <div class="col-xs-4">
+                    
+                    <button class="btn btn-default my-but-style-t my_col-xs-4" type="submit">客胜<img class="win" src="img/win.png"></button>
                     <div>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar progress-bar-my" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
