--- a/pkend.html
+++ b/pkend.html
@@ -14,17 +14,17 @@
     <div id="pkend_header">
         <div id="pkend_header_left"><img src="img/left.png" onclick="goBackClick()"/><div class="otherheader_right"><img src="img/share.png"></div></div>
         <div class="pk_countries">
-                <span class="pk_countries_left" style="text-align: right">俄国</span>
+                <span class="pk_countries_left" style="text-align: right"></span>
                 <img class="pk_countries_guoone" src="img/guo1.png">
                 <span class="pk_title">世界波世界波世界波世界波</span>
                 <img class="pk_countries_guotwo" src="img/guo2.png">
-                <span  class="pk_countries_right">沙特</span>
+                <span  class="pk_countries_right"></span>
         </div>
-        <div class="pkend_bottom_text">5:000</div>
+        <div class="pkend_bottom_text">5:0</div>
         <div id="pk_name">
             <div class="pk_name_lfet">俄国</div>
-            <img class="pk_time_img" src="img/my_pktiem.png" /><span>23：00</span>
-            <div class="pk_name_right">沙特沙特沙特沙特</div>
+            <img class="pk_time_img" src="img/my_pktiem.png" /><span>已结束</span>
+            <div class="pk_name_right">沙特沙特</div>
         </div>
     </div>
     <div id="pkstart_top">
@@ -101,9 +101,7 @@
                         距截至时间
                     </h4>
                     <h4 class="my_meia_titel my_meia_titel_line">
-                        <span class="my-text-color-t">02</span>天
-                        <span class="my-text-color-t mgl10">04</span>时
-                        <span class="my-text-color-t mgl10">50</span>分
+                        <span class="my-text-color-t">已截止</span>
                     </h4>
                 </div>
             </div>          
@@ -129,7 +127,7 @@
             </div>            
         </div>
         <div id="pkstart_footer">
-            <div class="my_pkend_footer_titel">中奖人数</div>
+            <div class="my_pkend_footer_titel">中奖人数:123123</div>
             <div>
                 <div class="row ranking_my_list">
                     <div class="col-xs-9 my-text_xs_4"><img class="my_top_img" src="img/user_img.png"/>胜率排行</div>
