--- a/pkend.html
+++ b/pkend.html
@@ -133,6 +133,16 @@
                     <div class="col-xs-9 my-text_xs_4"><img class="my_top_img" src="img/user_img.png"/>胜率排行</div>
                     <div class="col-xs-2">99.99%</div>
                 </div>
+                <div class="row ranking_my_list">
+                    <div class="col-xs-9 my-text_xs_4"><img class="my_top_img" src="img/user_img.png"/>胜率排行</div>
+                    <div class="col-xs-2">99.99%</div>
+                </div> 
+                
+                <div class="row ranking_my_list">
+                    <div class="col-xs-9 my-text_xs_4"><img class="my_top_img" src="img/user_img.png"/>胜率排行</div>
+                    <div class="col-xs-2">99.99%</div>
+                </div>                  
+
             </div>
         </div>
     </div>
