--- a/index.html
+++ b/index.html
@@ -1,189 +1,1 @@
-﻿<!DOCTYPE html>
-<!--HTML5 doctype-->
-
-<html lang="zh-cmn-Hans">
-<head>
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <title>世界杯</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="third/weiui/weui.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="third/swiper/swiper.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/common.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
-</head>
-<body>
-<div id="header">
-<div id="header_top">
-	<div id="header_img">
-		<a href="choselogin.html" id="header_a"><img src="img/user_light.png"/></a>
-	</div>
-	<span>赛报</span>
-</div>
-<div id="header_nav">
-	<div class="slide-box">
-		<div class="slide-item"><span>世界杯</span></div>
-		<div class="slide-item"><span>欧冠</span></div>
-		<div class="slide-item"><span>亚冠</span></div>
-		<div class="slide-item"><span>意甲</span></div>
-		<div class="slide-item"><span>英超</span></div>
-		<div class="slide-item"><span>世界杯</span></div>
-		<div class="slide-item"><span>欧冠</span></span></div>
-		<div class="slide-item"><span>亚冠</span></div>
-		<div class="slide-item"><span>意甲</span></div>
-		<div class="slide-item"><span>英超</span></div>
-		<div class="slide-item"><span>欧冠</span></div>
-		<div class="slide-item"><span>亚冠</span></div>
-		<div class="slide-item"><span>意甲</span></div>
-		<div class="slide-item"><span>英超</span></div>
-	</div>
-</div>
- </div>
-    <div id="index_page_conent">
-        <div class="index_page">
-            <div class="myswiper">
-                <div class="swiper-container">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div>
-                                <img src="img/testnav.png" >
-                                <div class="my_swiper_bg"></div>
-                                <div class="my_swiper_text">天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div>
-                                <img src="img/testnav.png">
-                                <div class="my_swiper_bg"></div>
-                                <div class="my_swiper_text">天下足球标题</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div>
-                                <img src="img/testnav.png">
-                                <div class="my_swiper_bg"></div>
-                                <div class="my_swiper_text">天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div>
-                                <img src="img/testnav.png">
-                                <div class="my_swiper_bg"></div>
-                                <div class="my_swiper_text">天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-pagination"></div>
-                </div>
-            </div>
-            
-            <div class="weui-panel__bd">
-                <a href="news.html" class="weui-media-box weui-media-box_appmsg">
-                    <div class="weui-media-box__hd over_hidden">
-                        <img class="my_img" src="img/test_c.jpg"/>
-                    </div>
-                    <div class="weui-media-box__bd">
-                        <h4 class="weui-media-box__title">天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题</h4>
-                        <p class="weui-media-box__desc">
-                            <div class="weui-flex">
-                                <div class="weui-flex__item"><div class="placeholder"><span class="zhanbao">足球战报</span></div></div>
-                                <div class="weui-flex__item"><div class="placeholder"><span class="pinlun">评论1223123</span></div></div>
-                            </div>                            
-                        </p>
-                    </div>
-                </a>
-                <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-                    <div class="weui-media-box__hd">
-                        <img class="my_img" src="img/test.jpg"/>
-                    </div>
-                    <div class="weui-media-box__bd">
-                        <h4 class="weui-media-box__title">天下足球标题</h4>
-                        <p class="weui-media-box__desc">
-                            <div class="weui-flex">
-                                <div class="weui-flex__item"><div class="placeholder"><span class="zhanbao">足球战报</span></div></div>
-                                <div class="weui-flex__item"><div class="placeholder"><span class="pinlun">评论1223123</span></div></div>
-                            </div>                            
-                        </p>
-                    </div>
-                </a>
-                <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-                    <div class="weui-media-box__hd">
-                        <img class="my_img" src="img/test.jpg"/>
-                    </div>
-                    <div class="weui-media-box__bd">
-                        <h4 class="weui-media-box__title">天下足球标题</h4>
-                        <p class="weui-media-box__desc">
-                            <div class="weui-flex">
-                                <div class="weui-flex__item"><div class="placeholder"><span class="zhanbao">足球战报</span></div></div>
-                                <div class="weui-flex__item"><div class="placeholder"><span class="pinlun">评论1223123</span></div></div>
-                            </div>                            
-                        </p>
-                    </div>
-                </a>
-                <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-                    <div class="weui-media-box__hd">
-                        <img class="my_img" src="img/test.jpg"/>
-                    </div>
-                    <div class="weui-media-box__bd">
-                        <h4 class="weui-media-box__title">天下足球标题</h4>
-                        <p class="weui-media-box__desc">
-                            <div class="weui-flex">
-                                <div class="weui-flex__item"><div class="placeholder"><span class="zhanbao">足球战报</span></div></div>
-                                <div class="weui-flex__item"><div class="placeholder"><span class="pinlun">评论1223123</span></div></div>
-                            </div>                            
-                        </p>
-                    </div>
-                </a>                                                 
-            </div>           
-            
-        </div>
-    </div>
-    <div id="footer">
-        <ul id="footer_content">
-            <li class="footer_list">
-                <a href="index.html" class="my_footer_a my_footer_a_home">
-                    <img class="act_img" src="img/caidan1.png"/>
-                    <img class="no_act footer_list_t" src="img/caidan01.png"/>
-                    <span>赛报</span>
-                </a>
-            </li>
-            <li class="footer_list">
-                <a href="ranking.html" class="my_footer_a my_footer_a_bang">
-                    <img class="act_img"  src="img/caidan2.png">
-                    <img class="no_act" src="img/caidan02.png">
-                    <span>榜单</span>
-                </a>
-            </li>
-            <li class="footer_list footer_list_sai">
-                <a href="quiz.html"class="my_footer_a my_footer_sai">
-                    <img class="act_img"  src="img/caidan3.png">
-                    <img class="no_act" src="img/caidan03.png">
-                    <span>赛事</span>
-                </a>
-            </li>
-            <li class="footer_list">
-                <a href="mall.html" class="my_footer_a my_footer_show">
-                    <img class="act_img"  src="img/caidan4.png">
-                    <img class="no_act" src="img/caidan04.png">
-                    <span>积分商城</span>
-                </a>
-                </li>
-            <li class="footer_list">
-                <a href="user.html" class="my_footer_a my_footer_my">
-                <img class="act_img" src="img/caidan5.png"/>
-                <img class="no_act" src="img/user_light.png"/>
-                <span>我的</span>
-                </a>
-            </li>
-        </ul>	
-    </div>
-    <div class="weui-loadmore" id="load">
-        <i class="weui-loading"></i>
-        <span class="weui-loadmore__tips">正在加载</span>
-    </div>
-</body>
-</html>
-<!-- third-第三方库(必须) begin -->
-<script src="third/jquery/jquery.min.js"></script>
-<script src="third/swiper/swiper.min.js"></script>
-<script src="js/index.js"></script>
-
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>李棠寅的前端工作</title><link href=./static/css/app.ef48391beced7be52e33de853d3ee4d5.css rel=stylesheet></head><body style="height: 100%"><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.1748317793fd05195ff8.js></script><script type=text/javascript src=./static/js/app.f9318ff7a7608c935dd7.js></script></body></html>
