--- a/hw.html
+++ b/hw.html
@@ -20,7 +20,7 @@
             <div class="hw_top_num">88,88元</div>
             <div class="ewm"></div>
             <div class="hw_bottom">长按二维码</div>
-            <div class="hw_bottom">关注立即领红包</div>
+            <div>关注立即领红包</div>
        </div>
     </div>
 </body>
