--- a/hwend.html
+++ b/hwend.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!--HTML5 doctype-->
-
 <html lang="zh-cmn-Hans">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +6,7 @@
     <title>宏旺科技红包大派送！</title>
     <link rel="stylesheet" type="text/css" media="screen" href="css/common.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/weui.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/hw.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/hwend.css" />
 </head>
 <body>
     <div id="hw">
@@ -16,11 +14,10 @@
             <img src="img/ling_logo.png">
        </div>
        <div id="hw_content">
-            <div class="hw_titel">宏旺科技给您发来一个红包</div>
-            <div class="hw_top_num">88.88元</div>
+            <div class="hw_titel">!红包已被领取</div>
             <div class="ewm"></div>
             <div class="hw_bottom">长按二维码</div>
-            <div>关注立即领红包</div>
+            <div>关注领取更多红包</div>
        </div>
     </div>
 </body>
