--- a/hwend.html
+++ b/hwend.html
@@ -14,7 +14,7 @@
             <img src="img/ling_logo.png">
        </div>
        <div id="hw_content">
-            <div class="hw_titel">!红包已被领取</div>
+            <div class="hw_titel"><span class="hw_titel_gt">!</span>红包已被领取</div>
             <div class="ewm"></div>
             <div class="hw_bottom">长按二维码</div>
             <div>关注领取更多红包</div>
