--- a/mall.html
+++ b/mall.html
@@ -22,7 +22,7 @@
                         <img src="img/man.jpg" style="width: 45px;display: block">
                     </div>
                     <div class="weui-cell__bd">
-                        <p>天下足球</p>
+                        <p>不要你了，卖了换钱</p>
                         <p style="font-size: 13px;color: #888888;position: relative;text-indent: 12px;">
                             <img src="img/goods_money.png" style="width: 20px;display: block;position: absolute">
                             <span style="display: inline-block;">12123</span>
@@ -74,31 +74,31 @@
                 <div class="slide-item">
                     <a href="googslist.html">
                         <div><img src="img/man.jpg" style="width: 40px"></div>
-                        <div>童鞋一</div>
+                        <div>赖童鞋</div>
                     </a>
                 </div> 
                 <div class="slide-item">
                     <a href="googslist.html">
                         <div><img src="img/man.jpg" style="width: 40px"></div>
-                        <div>童鞋二</div>
+                        <div>赖童鞋</div>
                    </a> 
                 </div>
                 <div class="slide-item">
                     <a href="googslist.html">
                     <div><img src="img/man.jpg" style="width: 40px"></div>
-                    <div>童鞋三</div>
+                    <div>赖童鞋</div>
                     </a>
                 </div>                
                 <div class="slide-item">
                     <a href="googslist.html">
                     <div><img src="img/man.jpg" style="width: 40px"></div>
-                    <div>童鞋四</div>
+                    <div>赖童鞋</div>
                     </a>
                 </div>
                 <div class="slide-item">
                     <a href="googslist.html">
                     <div><img src="img/man.jpg" style="width: 40px"></div>
-                    <div>童鞋五</div>
+                    <div>赖童鞋</div>
                     </a>
                 </div>                
         </div>
