--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">    
     <title>世界杯</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="third/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/common.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/login.css" />
@@ -13,37 +14,37 @@
 <body>
 	<div class="mylogin">
 		<form>
-			<div id="loginpage">
+			<div id="loginpage" style="display:block;">
 				<div class="myclose">
 					<span onclick="goBackClick()">
-						<img src="img/error.png"/>
+						<img style="width: 20px;" src="img/error.png"/>
 					</span>
 					<span><a href="registered.html">注册</a></span>
 				</div>
-				<div class="mylogin_titel my_padding_t"><h3 class="page__title">账号登录</h3></div>
+				<div class="mylogin_titel" style="padding-top: 25%"><h3 class="page__title">账号登录</h3></div>
 				<div>
 					<div id="login_content">
 						<div class="row">
-							<div class="col-xs-2 my_xs_2" ><span class="glyphicon glyphicon-phone"></span></div>
+							<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
 							<div class="col-xs-10"><input type="text" placeholder="(中国+86)输入手机号"/></div>
 						</div> 
 
-						<div class="row my_row_s">
-							<div class="col-xs-2 my_xs_2"><span class="glyphicon glyphicon-lock"></span></div>
+						<div class="row" style="margin-top:12px">
+							<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
 							<div class="col-xs-10"><input type="password" placeholder="输入密码"/></div>
 						</div>
-						<div class="row my_row_b">
-							<div class="col-xs-5 my_xs_f_o">
+						<div class="row" style="border: none">
+							<div class="col-xs-5" style="height: 70px;line-height: 70px;text-align:left;padding:0">
 								<span onclick="gotoLoginYClick()">验证码登录</span>
 							</div>
-							<div class="col-xs-2 my_xs_f_t"></div>
-							<div class="col-xs-5 my_xs_f_o my_xs_f_l">
+							<div class="col-xs-2" style="height: 70px;line-height: 70px;"></div>
+							<div class="col-xs-5 my-text-center"  style="height: 70px;line-height: 70px;text-align:right;padding:0">
 								<span onclick="gotoForgetClick()">忘记密码</span>
 							</div>
 						</div>
-						<div class="row my_row_but" id="otherlogin">
+						<div class="row" style="border: none;margin-top:15px" id="otherlogin">
 							<div class="col-xs-12 my-text-center">
-							<button class="btn btn-default my_default_but" type="button">登录</button>
+							<button class="btn btn-default" type="submit" style="width: 70%;text-align: center;height:50px;font-size:16px;color:#111">登录</button>
 							</div>
 						</div>         
 					</div> 
@@ -54,82 +55,82 @@
 				</div>
 				</div>
 
-			<div id="login_t">
+			<div id="login_t" style="display:none">
 				<div>
-					<div class="myclose myclose_p">
-						<span onclick="goLoginClick()"><img class="my_img_w" src="img/my_left.png"></span>
+					<div class="myclose" style="padding-left: 7px;">
+						<span onclick="goLoginClick()"><img style="width: 25px;" src="img/my_left.png"></span>
 						<span><a href="registered.html">注册</a></span>
 					</div>					
 				</div>
-				<div class="forget_content_t">
-					<div class="my-text-center"><h3 class="page__title">账号登录</h3></div>
-					<div class="row my_row_line">
-						<div class="col-xs-2 my_xs_2"><span class="glyphicon glyphicon-phone"></span></div>
+				<div class="forget_content_t" style="clear: both;padding-top: 25%">
+					<div style="text-align:center"><h3 class="page__title">账号登录</h3></div>
+					<div class="row" style="margin-top:12px;margin-bottom:30px">
+						<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
 						<div class="col-xs-10"><input type="text" placeholder="输入手机号"/></div>
 					</div>
-					<div class="row my_row_line">
-						<div class="col-xs-2 my_xs_2"><span class="glyphicon glyphicon-lock"></span></div>
+					<div class="row" style="margin-top:12px;margin-bottom:30px">
+						<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
 						<div class="col-xs-5"><input type="text" placeholder="输入验证码"/></div>
-						<div class="col-xs-5 my-text-center my_xs_2">
+						<div class="col-xs-5 my-text-center"  style="height: 50px;line-height: 50px;">
 							<span id="yzcode">获取验证码</span>
 						</div>
 					</div>
-					<div class="row my_row_margin">
+					<div class="row" style="border: none;margin-top:15px" >
 						<div class="col-xs-12 my-text-center">
-						<button class="btn btn-default my_default_but" type="button" >完成</button>
+						<button class="btn btn-default" type="submit" style="width: 70%;text-align: center;height:50px;font-size:16px;color:#111">完成</button>
 						</div>
 					</div>  			        	    		
 				</div>
 			</div>  
 
-			<div id="forgetpage">
+			<div id="forgetpage" style="display:none" >
 				<div>
-					<div class="myclose myclose_p">
-						<span onclick="goLoginClick()"><img class="my_img_w" src="img/my_left.png"></span>
+					<div class="myclose" style="padding-left: 7px;">
+						<span onclick="goLoginClick()"><img style="width: 25px;" src="img/my_left.png"></span>
 						<span><a href="registered.html">注册</a></span>
 					</div>					
 				</div>
-				<div id="forget_content" class="my_padding_t my_padding_c">
-					<div class="my-text-center"><h3 class="mylogin_titel">找回密码</h3></div>
+				<div id="forget_content" style="clear: both;padding-top: 25%">
+					<div style="text-align:center"><h3 class="mylogin_titel">找回密码</h3></div>
 					<div class="row">
-						<div class="col-xs-2 my_xs_2"><span class="glyphicon glyphicon-phone"></span></div>
+						<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
 						<div class="col-xs-10"><input type="text" placeholder="(中国+86)输入手机号"/></div>
 					</div>        
-					<div class="row my_yzm_but_m">
-						<div class="col-xs-2 my_xs_2"><span class="glyphicon glyphicon-lock"></span></div>
+					<div class="row" style="margin-top:12px">
+						<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
 						<div class="col-xs-5"><input type="text" placeholder="输入验证码"/></div>
-						<div class="col-xs-5 my-text-center my_xs_2">
+						<div class="col-xs-5 my-text-center"  style="height: 50px;line-height: 50px;">
 							<span id="yzcode">获取验证码</span>
 						</div>
 					</div>
-					<div class="row my_row_margin">
+					<div class="row" style="border: none;margin-top:15px" >
 						<div class="col-xs-12 my-text-center">
-							<button onclick="goToForgetTClick()" class="btn btn-default my_default_but" type="button">提交</button>
+						<button onclick="goToForgetTClick()" class="btn btn-default" type="submit" style="width: 70%;text-align: center;height:50px;font-size:16px;color:#111">提交</button>
 						</div>
 					</div>  			        	    		
 				</div>
 			</div>
 			
-			<div id="forgetpage_t">
-				<div class="my_zhuce_textg">
-					<div class="myclose myclose_p" >
-						<span onclick="goLoginClick()"><img class="my_img_w" src="img/my_left.png"></span>
+			<div id="forgetpage_t" style="display:none">
+				<div style="padding-left:8px;">
+					<div class="myclose" style="padding-left: 7px;">
+						<span onclick="goLoginClick()"><img style="width: 25px;" src="img/my_left.png"></span>
 						<span><a href="registered.html">注册</a></span>
 					</div>
 				</div>
-					<div class="forget_content_t my_padding_t my_padding_c">
-						<div class="my-text-center" ><h3 class="page__title">找回密码</h3></div>
-						<div class="row my_row_line">
-							<div class="col-xs-2 my_xs_2"><span class="glyphicon glyphicon-lock"></span></div>
+					<div class="forget_content_t" style="clear: both;padding-top: 25%">
+						<div style="text-align:center" ><h3 class="page__title">找回密码</h3></div>
+						<div class="row" style="margin-top:12px;margin-bottom:30px">
+							<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
 							<div class="col-xs-10"><input type="password" placeholder="输入密码"/></div>
 						</div>
-						<div class="row my_row_line">
-							<div class="col-xs-2 my_xs_2"><span class="glyphicon glyphicon-lock"></span></div>
+						<div class="row" style="margin-top:12px;margin-bottom:30px">
+							<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
 							<div class="col-xs-10"><input type="text" placeholder="输入手机验证码"/></div>
 						</div>
-						<div class="row my_row_margin" >
+						<div class="row" style="border: none;margin-top:15px" >
 							<div class="col-xs-12 my-text-center">
-							<button class="btn btn-default my_default_but" type="button">完成</button>
+							<button class="btn btn-default" type="submit" style="width: 70%;text-align: center;height:50px;font-size:16px;color:#111">完成</button>
 							</div>
 						</div>  			        	    		
 					</div>
@@ -140,4 +141,10 @@
 </html>
 <!-- third-第三方库(必须) begin -->
 <script src="third/jquery/jquery.min.js"></script>
+<script src="third/jquery/bootstrap.min.js"></script>
+<script src="third/jquery/bootstrap.min.js"></script>
+<!-- base lib-基础库 end-->
+<script src="lib/namespace.js"></script><!--namespace 全局匿名空间封装  -->
+<script src="lib/utlis.js"></script><!--untils 公共函数封装，包括验证方法 -->
+<!-- component 头部，底部引用 -->
 <script type="text/javascript"  src="js/login.js"></script>
